Bug 389964 - KRunner window behind keep-above windows on Wayland
Summary: KRunner window behind keep-above windows on Wayland
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.17.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Kai Uwe Broulik
URL:
Keywords: regression, wayland-only
: 390015 412595 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-02-06 18:10 UTC by Martin Flöser
Modified: 2020-06-30 14:47 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Flöser 2018-02-06 18:10:23 UTC
Since commit https://commits.kde.org/plasma-workspace/fc5a45403025286fed063273f958ef0aa04f7f30 KRunner opens behind keep above windows on Wayland. This is a regression to before and especially compared to X11.
Comment 1 Martin Flöser 2018-02-07 17:32:37 UTC
*** Bug 390015 has been marked as a duplicate of this bug. ***
Comment 2 Alexander Mentyu 2018-04-25 11:14:54 UTC
Can reproduce in:

Plasma: 5.12.4
Apps: 18.04.0
Frameworks: 5.45.0
Qt: 5.10.1
Kernel: 4.14.36-1-MANJARO
OS: Netrunner Rolling
Video: Intel 4400
Driver: xf86-video-intel 1:2.99.917+823+gd9bf46e4-1
Screen: 1600x900
wayland-protocols 1.13-1
wayland 1.14.0-1
Comment 3 Rainer Finke 2019-05-25 15:31:11 UTC
If I press ALT + SPACE then krunner is still below a top panel.
Comment 4 Méven Car 2019-10-04 07:42:06 UTC
*** Bug 412595 has been marked as a duplicate of this bug. ***
Comment 5 Aleix Pol 2020-04-12 21:18:57 UTC
This was resolved by going through dbus.
Comment 6 Patrick Silva 2020-04-22 13:06:49 UTC
This bug persists on Neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.1
Comment 7 Méven Car 2020-05-16 08:50:15 UTC
Caused by:
https://phabricator.kde.org/D10197

I believe Aleix thought it was fix with https://phabricator.kde.org/D27458 but those two are unrelated.
Comment 8 Benjamin Port 2020-06-02 17:43:23 UTC
Fixed in 5.20:
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/21
Comment 9 Eugene 2020-06-06 07:44:47 UTC
Please, backport this to 5.19.x.
Comment 10 Patrick Silva 2020-06-13 14:24:59 UTC
This issue persists on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Comment 11 Christoph Feck 2020-06-29 19:56:04 UTC
Please reopen the ticket if the issue is still reproducible.
Comment 12 Patrick Silva 2020-06-30 00:58:08 UTC
not fixed, reopening...

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.72.0
Qt Version: 5.14.2
Comment 13 Benjamin Port 2020-06-30 14:47:33 UTC
Git commit 0ec7a3e2cbd39ef5a117f062bf56a70eb534cf0c by Benjamin Port.
Committed on 30/06/2020 at 14:47.
Pushed by bport into branch 'master'.

Fix KRunner to show on top of above windows

M  +11   -10   krunner/view.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/0ec7a3e2cbd39ef5a117f062bf56a70eb534cf0c