Fix KRunner to show on top of above windows

BUG: 389964